[package]
name = "cronwrap-alert"
version = "0.1.0"
authors = ["Tobias Nießen <tniessen@tnie.de>"]
publish = false
edition = "2021"

[lib]
name = "cronwrap"
#path = "src/lib.rs"

[[bin]]
name = "cronwrap-alert"
#path = "src/main.rs"

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
gethostname = "0.4.3"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
tiny_http = "0.12.0"
